replace linker.js with server.js for on button activation cutting of tetgen_io.cpp

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             }
         }
     </script>
+    
+    <div style="position: absolute; top: 10px; left: 10px; color: blue; z-index: 1000;">
+        <button id="cutModelBtn">Cut Model</button>
+        <button id="resetModelBtn">Reset</button>
+    </div>
+    
     <script type="module" src="render.js"></script>
 </body>
 </html>
