--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div style="position: absolute; top: 10px; left: 10px; color: blue; z-index: 1000;">
         <button id="cutModelBtn">Cut Model</button>
         <button id="resetModelBtn">Reset</button>
+        <button id="scrambleModelBtn">Scramble Model Position</button>
+        <button id="randomizeFlyingBtn">Flying Fragments</button>
     </div>
     
     <script type="module" src="render.js"></script>
